--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3"
   },
   "devDependencies": {
     "faker": "^5.4.0",
