--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
